<resources>
    <string name="app_name">Movies</string>
    <string name="idMovie">Id:</string>
    <string name="title">Title:</string>
    <string name="subtitle">Subtitle:</string>
    <string name="year">Year:</string>
    <string name="description">Description:</string>
    <string name="category">Category:</string>
    <string name="idCategory">Id:</string>
    <string name="URL_BASE" translatable="false">http://garagecoders.rocks:4000/api/movies/</string>
    <string name="category_title">Categories</string>
    <string name="movies_title">Movies</string>
</resources>
